fixed spacing between labels and text boxes, fixed formatting

--- a/ui/app/login/page.module.css
+++ b/ui/app/login/page.module.css
@@ -1,89 +1,86 @@
-.pageContent{
-    background-color: white;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.pageContent {
+  background-color: white;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .title {
-    font-size: 50px;
-    font-weight: bold;
-    gap: 30px;
-    margin-bottom: 10px;
-    size: 200px; 
+  font-size: 50px;
+  font-weight: bold;
+  gap: 30px;
+  margin-bottom: 10px;
+  size: 200px;
 }
-.subTitle{
-    font-size: 15px;
-    margin-bottom: 50px;
-    font-weight: normal;
+.subTitle {
+  font-size: 15px;
+  margin-bottom: 50px;
+  font-weight: normal;
 }
-.formContainer{
-    display: flex;
-    align-items: center;
-    background-color: #f4f4f4;
-    padding: 20px 40px;
-    width: 400px;
-    height: 550px;
-    border-radius: 15px;
-    border-style: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
+.formContainer {
+  display: flex;
+  align-items: center;
+  background-color: #f4f4f4;
+  padding: 20px 40px;
+  width: 400px;
+  height: 550px;
+  border-radius: 15px;
+  border-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
-.form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2px;
-    justify-content: center;
-    size: 30px;
-    align-content: space-between;
-    width:auto;
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  justify-content: center;
+  size: 30px;
+  align-content: space-between;
+  width: auto;
 }
 
-.inputLabelContainer{
-    text-align: left;
-    display: flex;
-    align-self: flex-start;
-    font-size: 15px;
-    
+.inputLabelContainer {
+  text-align: left;
+  display: flex;
+  align-self: flex-start;
+  font-size: 15px;
 }
-.input {   
-    font-size: 1.1rem;
-    width: 300px;
-    margin-bottom: 50px;
+.input {
+  font-size: 1.1rem;
+  width: 300px;
+  margin-bottom: 50px;
 }
 
 .submitButton {
-    width: 200px;
-    height: 40px;
-    font-size: 15px;
-    font-weight: bold;
-    margin-bottom: 40px;
+  width: 200px;
+  height: 40px;
+  font-size: 15px;
+  font-weight: bold;
+  margin-bottom: 40px;
 }
 .forgotPassword {
-    font-size: 15px;
-    color: #4096ff;
-    gap:2px;
-    text-decoration: underline;
+  font-size: 15px;
+  color: #4096ff;
+  gap: 2px;
+  text-decoration: underline;
 }
-.signUpContainer{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+.signUpContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
-.signUpTitle{
-    font-weight: normal;
-    margin-right: 5px;
+.signUpTitle {
+  font-weight: normal;
+  margin-right: 5px;
 }
 .createAccount {
-    font-size: 15px;
-    color: black;
-    font-weight: bold;
-    
+  font-size: 15px;
+  color: black;
+  font-weight: bold;
 }
-
